# language-specs-mcp

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLUGIN.md  QUICKSTART.md  README.md  SECURITY.md  VERSIONING.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.site.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  refresh.yml  release.yml  repo-settings.yml
agents/: code-standards.md  linter-helper.md  security-reviewer.md  spec-advisor.md
commands/: check-language.md  checklist.md  framework.md  lint-rule.md  project-rules.md  search-specs.md  spec.md
docs/: API.md  ARCHITECTURE.md  ROADMAP-10-10.md  SCRIPTS-REFACTOR.md  SYSTEM_PROMPT_TEMPLATE.md  usage.md  versions.md
docs/automation/: README.md  com.specforge.refresh.plist  com.specforge.validate-urls.plist  cron.txt
docs/site/: app.js  health.html  health.js  health.ts  index.html  styles.css  url-fix-log.json  url-status.json
hooks/: hooks.json
scripts/: _common.py  backfill-stubs.py  cleanup-urls.py  dashboard.py  diagnose-fetch.py  doctor.py  fetch-assembly.sh  fetch-bash.sh  fetch-basic.sh  fetch-batch.sh  fetch-c.sh  fetch-cpp.sh  fetch-csharp.sh  fetch-css.sh  fetch-delta.py  fetch-git.sh  fetch-go.sh  fetch-html.sh  fetch-java.sh  fetch-javascript.sh  fetch-kotlin.sh  fetch-legacy.py  fetch-lua.sh  fetch-parallel.py  fetch-powershell.sh  fetch-python.sh  fetch-rust.sh  fetch-sql.sh  fetch-swift.sh  fetch-typescript.sh  fetch.py  fix-urls.py  generate-health.py  generate-index.py  generate-manifests.py  generate-search-index.py  generate.py  refresh.py  report-versions.py  stamp-versions.py  (+8 more)
scripts/automation/: install.sh  refresh.sh  uninstall.sh  validate-urls.sh
skills/specforge/: SKILL.md
specs/: index.json  search.json
specs/_shared/: sources.json
specs/assembly/: .fetched-at  aarch64.md  arm32.md  arm64.md  generation-checklist.md  index.json  riscv.md  search.json  sources.json  spec.md  wasm.md  x86-64.md
specs/bash/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/basic/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/batch/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/c/: .fetched-at  compilers.md  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/clojure/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/cpp/: .fetched-at  compilers.md  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/csharp/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/css/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/dart/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/dockerfile/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/elixir/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/git/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/go/: .fetched-at  effective-go.html  effective-go.md  generation-checklist.md  index.json  search.json  sources.json  spec.html  spec.md
specs/haskell/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/html/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/java/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/javascript/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/julia/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/kotlin/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/lua/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/markdown/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/ocaml/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/php/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/powershell/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/python/: .fetched-at  generation-checklist.md  index.json  pep8.md  search.json  sources.json  spec.md
specs/r/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/ruby/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/rust/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/scala/: .fetched-at  generation-checklist.md  index.json  search.json  sources.json  spec.md
specs/sql/: .fetched-at  generation-checklist.md  index.json  search.json  spec.md  (+1 more)
src/: index.ts
tests/: __init__.py  conftest.py  index.test.js
tools/: versions.json
webui/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+4214 files in other folders)
